# AppLib

./: CMakeLists.txt  README.md
res/: result.txt
src/: AppLib.cpp
